Brincadeirinha para teste

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!--shrink-to-fit: quanto vai enconlher relativamente ao resto dos itens flexíveis -->
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Tamires Pedrali de Aquino</title>
+    <title>Hallo!</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -19,16 +19,16 @@
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">TP</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">=)</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projetos</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Desce aqui</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Depois aqui</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Aqui também, vai</a></li>
                 </ul>
             </div>
         </div>
@@ -37,8 +37,8 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Tamires de Aquino</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">Front-end Developer</h2>
+                <h1 class="mx-auto my-0 text-uppercase">Oiii, Rafaaa =)</h1>
+                <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
                 <a class="btn btn-primary js-scroll-trigger" href="#about">Comece!</a>
             </div>
         </div>
@@ -50,12 +50,8 @@
                 <div class="col-lg-8 mx-auto">
                     <h2 class="text-white mb-4">Caminhos</h2>
                     <p class="text-white-50">
-                        Cursando "Desenvolvimento Web Full Stack" na escola Digital House.
-                        Formada em Química Industrial, sempre se interessou por Programação. Em 2013, teve seu primeiro contato com a área através de uma Iniciação Científica em Química Computacional.
-                        Aqui, trabalhou com Linux, SSH e Gaussian, um open source de manipulação gráfica de moléculas químicas.
-                        Entretanto, decidiu se dedicar a outros projetos que não envolviam 100% código. Apenas em 2019, com o programa "Mais Mulheres na Programação", da escola Digital House, candidatou-se
-                        à bolsa de estudos para o curso de Desenvolvimento Web. Desde então seu interesse cresce a cada dia. Atualmente, estuda HTML, CSS, JavaScript e Python, este último, principalmente, para automação, um de seus hobbies.
-                        
+                        Título drama queen pra te irritar =P 
+                        Só pra vc lembrar que eu sou muito legal e inteligente
                     </p>
                 </div>
             </div>
@@ -70,8 +66,8 @@
                 <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Projetos</h4>
-                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                        <h4>Ok, vai</h4>
+                        <p class="text-black-50 mb-0">Eu sei que sou chatinha às vezes....maaaas meus abraços são maravilhosos (e meus beijos também =P)</p>
                     </div>
                 </div>
             </div>
@@ -82,8 +78,8 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Misty</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                <h4 class="text-white">E vc...</h4>
+                                <p class="mb-0 text-white-50">Bom, eu sempre falo que vc é MUITO lindinho, ne? É que vc é e adoro olhar pra vc =) Lindinho é um jeito de ser, não só aparencia</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0" />
                             </div>
                         </div>
@@ -98,8 +94,8 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Mountains</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                <h4 class="text-white">Vou te bajular mais um pouco</h4>
+                                <p class="mb-0 text-white-50">Apesar das suas chatices e de vc me irritar as vezes =P hhahaha vc me faz muito muito feliz =D</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
                             </div>
                         </div>
@@ -113,9 +109,9 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Entre em contato!</h2>
+                        <h2 class="text-white mb-5">Sorriaaaa =D (estou com saudades =(  )</h2>
                         <form class="form-inline d-flex">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Escreva seu e-mail..." />
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Manda foto (ou vem me ver =P)..." />
                             <button class="btn btn-primary mx-auto" type="submit">Enviar</button>
                         </form>
                     </div>
