--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Sorriaaaa =D (estou com saudades =( vem me ver  )</h2>
+                        <h2 class="text-white mb-5">Sorriaaaa =D (estou com saudades =( )</h2>
                         <form class="form-inline d-flex">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Manda foto (ou vem me ver =P)..." />
                             <button class="btn btn-primary mx-auto" type="submit">Enviar</button>
