--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Vou te bajular mais um pouco</h4>
-                                <p class="mb-0 text-white-50">Apesar das suas chatices e de vc me irritar as vezes =P hhahaha vc me faz muito muito feliz =D</p>
+                                <p class="mb-0 text-white-50">Apesar das suas chatices e de vc me irritar as vezes =P hhahaha vc me faz sempre muito feliz =D</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Sorriaaaa =D (estou com saudades =( )</h2>
+                        <h2 class="text-white mb-5">Sorriaaaa =D</h2>
                         <form class="form-inline d-flex">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Manda foto (ou vem me ver =P)..." />
                             <button class="btn btn-primary mx-auto" type="submit">Enviar</button>
@@ -128,7 +128,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Endereço</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">Osasco, São Paulo, Brasil</div>
+                                <div class="small text-black-50">Fantástico mundo de OZ, Mordor, Brasil</div>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">E-mail</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">hello@helloword.com</a></div>
+                                <div class="small text-black-50">Jemand benutzt da???<a href="#!"></a></div>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Telefone/WhatsApp</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">+55 (11) 9999-9999</div>
+                                <div class="small text-black-50">Who knows???</div>
                             </div>
                         </div>
                     </div>
