--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">=)</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">TP</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Desce aqui</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Depois aqui</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Aqui também, vai</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Talk to me</a></li>
                 </ul>
             </div>
         </div>
@@ -37,9 +37,9 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Oiii, Rafaaa =)</h1>
+                <h1 class="mx-auto my-0 text-uppercase">Tamires de Aquino</h1>
                 <h2 class="text-white-50 mx-auto mt-2 mb-5"></h2>
-                <a class="btn btn-primary js-scroll-trigger" href="#about">Comece!</a>
+                <a class="btn btn-primary js-scroll-trigger" href="#about">Welcome!</a>
             </div>
         </div>
     </header>
@@ -48,10 +48,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">Caminhos</h2>
+                    <h2 class="text-white mb-4">About me</h2>
                     <p class="text-white-50">
-                        Título drama queen pra te irritar =P 
-                        Só pra vc lembrar que eu sou muito legal e inteligente
+                        Something about me
                     </p>
                 </div>
             </div>
@@ -66,8 +65,8 @@
                 <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Ok, vai</h4>
-                        <p class="text-black-50 mb-0">Eu sei que sou chatinha às vezes....maaaas meus abraços são maravilhosos (e meus beijos também =P)</p>
+                        <h4>Projects</h4>
+                        <p class="text-black-50 mb-0">Let's see what I'm doing...</p>
                     </div>
                 </div>
             </div>
@@ -78,8 +77,8 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">E vc...</h4>
-                                <p class="mb-0 text-white-50">Bom, eu sempre falo que vc é MUITO lindinho, ne? É que vc é e adoro olhar pra vc =) Lindinho é um jeito de ser, não só aparencia</p>
+                                <h4 class="text-white">GitHub</h4>
+                                <p class="mb-0 text-white-50">My firts project</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0" />
                             </div>
                         </div>
@@ -94,8 +93,8 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Vou te bajular mais um pouco</h4>
-                                <p class="mb-0 text-white-50">Apesar das suas chatices e de vc me irritar as vezes =P hhahaha vc me faz sempre muito feliz =D</p>
+                                <h4 class="text-white">Digital House</h4>
+                                <p class="mb-0 text-white-50">Little things that we've done there</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
                             </div>
                         </div>
@@ -109,10 +108,10 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Sorriaaaa =D</h2>
+                        <h2 class="text-white mb-5">Sign up</h2>
                         <form class="form-inline d-flex">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Manda foto (ou vem me ver =P)..." />
-                            <button class="btn btn-primary mx-auto" type="submit">Enviar</button>
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Email" />
+                            <button class="btn btn-primary mx-auto" type="submit">Send</button>
                         </form>
                     </div>
                 </div>
@@ -126,9 +125,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Endereço</h4>
+                                <h4 class="text-uppercase m-0">Adress</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">Fantástico mundo de OZ, Mordor, Brasil</div>
+                                <div class="small text-black-50">Osasco, São Paulo, Brazil</div>
                             </div>
                         </div>
                     </div>
@@ -136,9 +135,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">E-mail</h4>
+                                <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">Jemand benutzt da???<a href="#!"></a></div>
+                                <div class="small text-black-50">Personal email<a href="#!"></a></div>
                             </div>
                         </div>
                     </div>
@@ -148,7 +147,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Telefone/WhatsApp</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">Who knows???</div>
+                                <div class="small text-black-50">Maybe I'll write it</div>
                             </div>
                         </div>
                     </div>
